--- a/resources/css/landing.css
+++ b/resources/css/landing.css
@@ -8,14 +8,14 @@
 
   width: 100vw;
   height: 100vh;
-}
-.landingContainer {
+
   background-image: url(/images/welcome-background-blur.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  opacity: .7;
-
+}
+.landingContainer {
+  background-color: rgba(0,0,0,.2);
   width: 100%;
   height: 100%;
 }
@@ -33,7 +33,6 @@
   background-color: rgba(0,0,0,.4);
 }
 .landingText {
-  opacity: 1;
   color: #19A6FF;
   background-image: -webkit-linear-gradient(92deg, #19A6FF, #508C7B);
   -webkit-background-clip: text;
@@ -55,5 +54,51 @@
   }
   50% {
     -webkit-filter: hue-rotate(180deg);
+  }
+}
+
+.scrollDown {
+  position: absolute;
+  bottom: 20px;
+  left: 100px;
+}
+
+.scrollDown img{
+  width: 80px;
+  margin-bottom: 10px;
+ /* -webkit-animation: gray-scale 3s infinite linear;
+  -webkit-filter: grayscale(100%);*/
+  -webkit-animation: opacity-scale 5s infinite linear;
+  opacity: 0;
+  display: block;
+}
+.scrollDown img:nth-child(1) {
+  -webkit-animation-delay: .125s;
+}
+.scrollDown img:nth-child(2) {
+  -webkit-animation-delay: .25s;
+}
+.scrollDown img:nth-child(3) {
+  -webkit-animation-delay: .375s;
+}
+
+@-webkit-keyframes gray-scale {
+  0%, 20% {
+    -webkit-filter: grayscale(100%);
+  }
+  10% {
+    -webkit-filter: grayscale(0%);
+  }
+  100% {
+    -webkit-filter: grayscale(100%);
+  }
+}
+
+@-webkit-keyframes opacity-scale {
+  0%, 10% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 1;
   }
 }
