--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,8 +1,22 @@
 @import "bootstrap/bootstrap";
 
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700);
+
 @btn-font-weight: 300;
-@font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
+@font-family-sans-serif: 'Source Sans Pro', sans-serif;
 
 body, label, .checkbox label {
 	font-weight: 300;
+}
+
+h1 .h1-appendage {
+  font-size: @font-size-small;
+  font-style: italic;
+}
+
+#footer {
+  color: @navbar-default-color;
+  margin-top: 20px;
+  background-color: @navbar-default-bg;
+  width: 100%;
 }
