--- a/resources/assets/less/bootstrap/variables.less
+++ b/resources/assets/less/bootstrap/variables.less
@@ -48,16 +48,16 @@
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
-@font-size-base:          14px;
-@font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
-@font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
+@font-size-base:          18px;
+@font-size-large:         ceil((@font-size-base * 1.25)); // ~21px
+@font-size-small:         ceil((@font-size-base * 0.85)); // ~15px
 
-@font-size-h1:            floor((@font-size-base * 2.6)); // ~36px
-@font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
-@font-size-h3:            ceil((@font-size-base * 1.7)); // ~24px
-@font-size-h4:            ceil((@font-size-base * 1.25)); // ~18px
+@font-size-h1:            floor((@font-size-base * 2)); // ~36px
+@font-size-h2:            floor((@font-size-base * 1.65)); // ~30px
+@font-size-h3:            ceil((@font-size-base * 1.33)); // ~24px
+@font-size-h4:            ceil((@font-size-base * 1.2)); // ~22px
 @font-size-h5:            @font-size-base;
-@font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
+@font-size-h6:            ceil((@font-size-base * 0.85)); // ~15px
 
 //** Unit-less `line-height` for use in components like buttons.
 @line-height-base:        1.428571429; // 20/14
@@ -347,7 +347,7 @@
 //##
 
 // Basics of a navbar
-@navbar-height:                    50px;
+@navbar-height:                    60px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-border-radius:             0;
 @navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
@@ -357,12 +357,11 @@
 @navbar-default-color:             #FFF;
 @navbar-default-bg:                #19a6ff;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
-@navbar-default-other:             #ff7219;
 
 // Navbar links
 @navbar-default-link-color:                @navbar-default-color;
 @navbar-default-link-font-size:             ceil((@font-size-base * 1.25));
-@navbar-default-link-hover-color:          @navbar-default-other;
+@navbar-default-link-hover-color:          @gray-lighter;
 @navbar-default-link-hover-bg:             transparent;
 @navbar-default-link-active-color:         darken(@navbar-default-link-color, 6.5%);
 @navbar-default-link-active-bg:            lighten(@navbar-default-bg, 6.5%);
