--- a/resources/assets/less/bootstrap/variables.less
+++ b/resources/assets/less/bootstrap/variables.less
@@ -38,6 +38,11 @@
 @link-hover-decoration: underline;
 
 
+//== Inverse Colors
+@brand-primary-inverse:         #ff8233;
+@link-color-inverse:            @brand-success;
+@text-color-inverse:            @body-bg;
+
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
