Added more inverse color elements

--- a/resources/assets/less/bootstrap/buttons.less
+++ b/resources/assets/less/bootstrap/buttons.less
@@ -80,6 +80,10 @@
   .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border);
 }
 
+.btn-primary-inverse {
+  .button-variant(@btn-primary-color-inverse; @btn-primary-bg-inverse; @btn-primary-border-inverse);
+}
+
 
 // Link buttons
 // -------------------------
@@ -120,6 +124,9 @@
   }
 }
 
+.btn-link-inverse {
+  color: @brand-primary-inverse;
+}
 
 // Button Sizes
 // --------------------------------------------------
