--- a/resources/assets/less/bootstrap/variables.less
+++ b/resources/assets/less/bootstrap/variables.less
@@ -175,6 +175,9 @@
 
 @btn-link-disabled-color:        @gray-light;
 
+@btn-primary-color-inverse:              @text-color-inverse;
+@btn-primary-bg-inverse:                 @brand-primary-inverse;
+@btn-primary-border-inverse:             darken(@btn-primary-bg-inverse, 5%);
 
 //== Forms
 //
