--- a/resources/assets/less/bootstrap/variables.less
+++ b/resources/assets/less/bootstrap/variables.less
@@ -15,10 +15,10 @@
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
 @brand-primary:         #19a6ff;
-@brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
-@brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
+@brand-info:            #27bbc3;
+@brand-success:         #00cc66;
+@brand-warning:         #fb8d3c;
+@brand-danger:          #e33e3e;
 
 
 //== Scaffolding
@@ -37,11 +37,6 @@
 //** Link hover decoration.
 @link-hover-decoration: underline;
 
-
-//== Inverse Colors
-@brand-primary-inverse:         #ff8233;
-@link-color-inverse:            @brand-success;
-@text-color-inverse:            @body-bg;
 
 //== Typography
 //
@@ -175,9 +170,6 @@
 
 @btn-link-disabled-color:        @gray-light;
 
-@btn-primary-color-inverse:              @text-color-inverse;
-@btn-primary-bg-inverse:                 @brand-primary-inverse;
-@btn-primary-border-inverse:             darken(@btn-primary-bg-inverse, 5%);
 
 //== Forms
 //
