--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -77,6 +77,13 @@ h1 .h1-appendage {
   }
 }
 
+#no-script-warning {
+  margin-top: -25px;
+  .container-inlay-container {
+    margin-top: 0;
+  }
+}
+
 #footer {
   color: @navbar-default-color;
   margin-top: 20px;
