--- a/resources/assets/less/bootstrap/bootstrap.less
+++ b/resources/assets/less/bootstrap/bootstrap.less
@@ -48,3 +48,6 @@
 // Utility classes
 @import "utilities.less";
 @import "responsive-utilities.less";
+
+//DutGRIFF's customized extension to bootstrap
+@import "dutgriff-custom";
