main container h1 margin fix

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -16,6 +16,12 @@ body, label, .checkbox label {
   }
 }
 
+#main-container {
+  > h1 {
+    margin-top: 0;
+  }
+}
+
 #footer {
   color: @navbar-default-color;
   margin-top: 20px;
