--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -9,6 +9,10 @@ body, label, .checkbox label {
 	font-weight: 300;
 }
 
+a {
+  font-weight: 400;
+}
+
 #no-script-warning {
   margin-top: -25px;
   .container-inlay-container {
