--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -31,4 +31,24 @@ a {
   margin-top: 20px;
   background-color: @navbar-default-bg;
   width: 100%;
+  a {
+    color: @navbar-default-color;
+  }
+  ul {
+    li {
+      .icon {
+        width: 40px;
+        margin-right: 10px;
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
+
+@media (max-width: @screen-xs-max) {
+  #footer {
+    li {
+      text-align: center;
+    }
+  }
 }
