Hide overflow of container-inlays

--- a/resources/assets/less/bootstrap/dutgriff-custom.less
+++ b/resources/assets/less/bootstrap/dutgriff-custom.less
@@ -1,5 +1,10 @@
 @text-color-inverse:            @body-bg;
 
+body {
+  overflow-x: hidden;
+  height: 100%;
+}
+
 .row.container-inlay-container {
   margin-bottom: 25px;
   margin-top: 25px;
