--- a/resources/assets/less/landing.less
+++ b/resources/assets/less/landing.less
@@ -14,11 +14,13 @@
   background-repeat: no-repeat;
   background-position: center center;
 }
+
 .landingContainer {
-  background-color: rgba(0,0,0,.2);
+  background-color: rgba(0, 0, 0, .2);
   width: 100%;
   height: 100%;
 }
+
 .landingContent {
   width: 500px;
   height: 150px;
@@ -30,8 +32,9 @@
 
   padding: 20px;
 
-  background-color: rgba(0,0,0,.4);
+  background-color: rgba(0, 0, 0, .4);
 }
+
 .landingText {
   color: #19A6FF;
   background-image: -webkit-linear-gradient(92deg, #19A6FF, #508C7B);
@@ -40,6 +43,7 @@
   text-fill-color: transparent;
   animation: hue 45s infinite linear;
 }
+
 .landingHeading {
   font-size: 72px;
   font-weight: 100;
@@ -64,19 +68,22 @@
   left: 10%;
 }
 
-.scrollDown img{
+.scrollDown img {
   width: 80px;
   margin-bottom: 10px;
   animation: opacity-scale 5s infinite linear;
   opacity: 0;
   display: block;
 }
+
 .scrollDown img:nth-child(1) {
   animation-delay: .125s;
 }
+
 .scrollDown img:nth-child(2) {
   animation-delay: .25s;
 }
+
 .scrollDown img:nth-child(3) {
   animation-delay: .375s;
 }
