--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,5 +1,6 @@
 @import "bootstrap/bootstrap";
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700);
+@import "bootstrap-datetimepicker/bootstrap-datetimepicker-build.less";
 
 @btn-font-weight: 300;
 @font-family-sans-serif: 'Source Sans Pro', sans-serif;
